# flipper-wifi

./: BLE_FUTURE_IDEAS.md  CMakeLists.txt  UART_COMMANDS.md  features.md  firmware_modes.md  partitions.csv
Architecture/: FlipperApp.md  Overview.md  Structure.md  UART.MD
app/: app.c  app.h  application.fam  fuse_radio.c  fuse_radio.h  fuse_radio_app.c  fuse_radio_app_i.h  fuse_radio_ble_distance_view.c  fuse_radio_ble_distance_view.h  fuse_radio_ble_scan_view.c  fuse_radio_ble_scan_view.h  fuse_radio_channel_picker_view.c  fuse_radio_channel_picker_view.h  fuse_radio_discover_progress_view.c  fuse_radio_discover_progress_view.h  fuse_radio_discover_result_view.c  fuse_radio_discover_result_view.h  fuse_radio_gatt_browser_view.c  fuse_radio_gatt_browser_view.h  fuse_radio_scan_view.c  fuse_radio_scan_view.h  fuse_radio_startup_view.c  fuse_radio_startup_view.h  fuse_radio_survey_preset_view.c  fuse_radio_survey_preset_view.h  fuse_radio_survey_progress_view.c  fuse_radio_survey_progress_view.h  fuse_radio_survey_result_view.c  fuse_radio_survey_result_view.h  fuse_radio_value_picker_view.c  fuse_radio_value_picker_view.h  fuse_radio_watch_live_view.c  fuse_radio_watch_live_view.h  fuse_radio_watch_result_view.c  fuse_radio_watch_result_view.h  uart.c  uart.h
app/scenes/: fuse_radio_scene.c  fuse_radio_scene.h  fuse_radio_scene_ble_device_actions.c  fuse_radio_scene_ble_device_info.c  fuse_radio_scene_ble_distance.c  fuse_radio_scene_ble_gatt_characteristics.c  fuse_radio_scene_ble_gatt_progress.c  fuse_radio_scene_ble_gatt_services.c  fuse_radio_scene_ble_menu.c  fuse_radio_scene_ble_saved_devices.c  fuse_radio_scene_ble_scan.c  fuse_radio_scene_ble_scan_preset.c  fuse_radio_scene_config.h  fuse_radio_scene_led_menu.c  fuse_radio_scene_led_value.c  fuse_radio_scene_main_menu.c  fuse_radio_scene_mode_select.c  fuse_radio_scene_placeholder.c  fuse_radio_scene_sd_explore.c  fuse_radio_scene_sd_menu.c  fuse_radio_scene_sd_result.c  fuse_radio_scene_settings.c  fuse_radio_scene_status.c  fuse_radio_scene_wifi_beacon.c  fuse_radio_scene_wifi_connect_password.c  fuse_radio_scene_wifi_connect_ssid.c  fuse_radio_scene_wifi_connected_menu.c  fuse_radio_scene_wifi_discover_progress.c  fuse_radio_scene_wifi_discover_result.c  fuse_radio_scene_wifi_http_result.c  fuse_radio_scene_wifi_mdns_host.c  fuse_radio_scene_wifi_mdns_result.c  fuse_radio_scene_wifi_menu.c  fuse_radio_scene_wifi_promiscuous_menu.c  fuse_radio_scene_wifi_promiscuous_result.c  fuse_radio_scene_wifi_promiscuous_survey_preset.c  fuse_radio_scene_wifi_promiscuous_survey_progress.c  fuse_radio_scene_wifi_promiscuous_survey_result.c  fuse_radio_scene_wifi_promiscuous_watch_channel.c  fuse_radio_scene_wifi_scan.c  (+12 more)
app/scenes/sd/: scene_sd_card.c  scene_sd_details.c  scene_sd_explorer.c  scene_sd_file_action.c  scene_sd_format.c  sd_common.h
main/: CMakeLists.txt  Kconfig.projbuild  flipper_rpc.c  flipper_rpc.h  flipper_rpc_ping.c  flipper_rpc_ping.h  flipper_transport.c  flipper_transport.h  idf_component.yml  led.c  led.h  main.c  parser.c  parser.h  router.c  router.h  sd_card.c  sd_card.h  settings.c  settings.h  types.h  uart.c  uart.h
main/ble/: ble.c  ble.h  gatt.c  rssi_track.c  scan.c
main/command/: command_context.h  command_router.c  command_router.h
main/modules/ble/: ble_command.c  ble_command.h  ble_gatt.c  ble_gatt.h  ble_manager.c  ble_manager.h
main/modules/ping/: ping_command.c  ping_command.h
main/modules/query/: query_command.c  query_command.h
main/modules/sd/: sd_card_manager.c  sd_card_manager.h  sd_command.c  sd_command.h
main/modules/send/: send_command.c  send_command.h
main/modules/settings/: settings_command.c  settings_command.h  settings_manager.c  settings_manager.h
main/modules/status_led/: status_led.c  status_led.h  status_led_command.c  status_led_command.h
main/modules/system/: system_command.c  system_command.h  system_mode_guard.c  system_mode_guard.h  system_mode_manager.c  system_mode_manager.h
main/modules/wifi/: wifi_command.c  wifi_command.h  wifi_discovery.c  wifi_discovery.h  wifi_manager.c  wifi_manager.h  wifi_mdns.c  wifi_mdns.h
main/modules/wifi/beacon/: beacon_command.c  beacon_command.h  wifi_beacon.c  wifi_beacon.h
main/modules/wifi/connected/: connected_command.c  connected_command.h  wifi_discovery.c  wifi_discovery.h  wifi_http.c  wifi_http.h  wifi_mdns.c  wifi_mdns.h
main/modules/wifi/promiscuous/: promiscuous_command.c  promiscuous_command.h  wifi_promiscuous.c  wifi_promiscuous.h
main/modules/zigbee/: zigbee_command.c  zigbee_command.h  zigbee_manager.c  zigbee_manager.h  zigbee_profile_store.c  zigbee_profile_store.h  zigbee_stack.c  zigbee_stack.h
main/wifi/: beacon.c  connected.c  promiscuous.c  wifi.c  wifi.h
main/zigbee/: listen.c  scan.c  zigbee.c  zigbee.h
tests/: CMakeLists.txt  test_parser.c  test_router.c  test_sd_card.c  test_settings.c  test_uart.c
tests/stubs/: esp_err.h  esp_system.h  sdkconfig.h
tests/stubs/driver/: uart.h
tests/stubs/freertos/: FreeRTOS.h  task.h
tools/: zigbee_compat_patch.cmake
unity-app/: CMakeLists.txt
