idf_component_register(
    SRCS
        "main.c"
        "command/command_router.c"
        "modules/ble/ble_command.c"
        "modules/ble/ble_gatt.c"
        "modules/ble/ble_manager.c"
        "modules/status_led/status_led.c"
        "modules/status_led/status_led_command.c"
        "modules/ping/ping_command.c"
        "modules/wifi/connected/connected_command.c"
        "modules/wifi/connected/wifi_discovery.c"
        "modules/wifi/connected/wifi_http.c"
        "modules/wifi/connected/wifi_mdns.c"
        "modules/wifi/promiscuous/promiscuous_command.c"
        "modules/wifi/promiscuous/wifi_promiscuous.c"
        "modules/wifi/beacon/beacon_command.c"
        "modules/wifi/beacon/wifi_beacon.c"
        "modules/wifi/wifi_command.c"
        "modules/wifi/wifi_manager.c"
        "modules/sd/sd_card_manager.c"
        "modules/sd/sd_command.c"
        "modules/send/send_command.c"
        "modules/query/query_command.c"
    INCLUDE_DIRS "."
    REQUIRES bt esp_driver_gpio esp_driver_rmt esp_driver_uart esp_event esp_http_client esp_netif esp_timer esp_wifi fatfs lwip nvs_flash)
